--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <header>
-
+    <header class="max-w-lg mx-auto bg-gray-200 rounded-md">
+        <!-- nav -->
+        <div class="h-8 flex items-center justify-center gap-60 border-none ">
+            <div class="flex gap-1">
+                <img class="w-6 h-6" src="assets/logo.png" alt="">
+                <h1>Dev<span class="font-bold">Board</span>
+                </h1>
+            </div>
+            <div class="flex gap-6">
+                <div class=" bg-white w-12 rounded-md">
+                    <button class="flex gap-1 ml-1 ">
+                        <img class="w-4 h-4 items-center mt-1" src="assets/checkbox.png" alt="">
+                        <p class="font-bold">23</p></button>
+                </div>
+                <img class="w-6 h-6" src="assets/theme-btn.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
