--- a/index.html
+++ b/index.html
@@ -27,8 +27,37 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class=" "></main>
+        <section class="h-8 mt-4 mx-71 gap-60 border-none">
+            <div class="flex gap-2">
+                <div class="flex items-center gap-2 bg-gray-200 px-2 rounded-md">
+                    <img class="w-4 h-4" src="assets/checkbox.png" alt="">
+                    <div class="my-2">
+                        <p class="text-gray-600 text-xs">Task Assigned</p>
+                        <p class="text-1xl font-bold">05</p>
+                    </div>
+                </div>
 
+                <div class="flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-300  px-2 rounded-md">
+                    <img class="w-6 h-6" src="assets/board.png" alt="">
+                    <div class="my-2">
+                        <p class="text-white text-xs">Discover Something</p>
+                        <p class="text-xs text-white">New Today!</p>
+                    </div>
+                </div>
+
+                <div class="flex items-center gap-2 bg-gray-200 px-2 rounded-md">
+                    <img class="w-4 h-4" src="assets/calender.png" alt="">
+                    <div class="my-2">
+                        <p class="text-gray-600 text-xs">Wed,</p>
+                        <p class="text-xs font-semibold">Jul 28 2025</p>
+                    </div>
+                </div>
+               <!-- card -->
+        
+                
+            </div>
+        </section>
     </main>
     <footer>
 
