--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class=" bg-white w-12 rounded-md">
                     <button class="flex gap-1 ml-1 ">
                         <img class="w-4 h-4 items-center mt-1" src="assets/checkbox.png" alt="">
-                        <p class="font-bold">23</p></button>
+                        <p id="task_num1" class="font-bold">23</p></button>
                 </div>
                 <img class="w-6 h-6" src="assets/theme-btn.png" alt="">
             </div>
@@ -34,7 +34,7 @@
                     <img class="w-4 h-4" src="assets/checkbox.png" alt="">
                     <div class="my-2">
                         <p class="text-gray-600 text-xs">Task Assigned</p>
-                        <p class="text-1xl font-bold">05</p>
+                        <p id="task-num" class="text-1xl font-bold">6</p>
                     </div>
                 </div>
         
@@ -73,7 +73,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                                 <p class="text-gray-600 text-xs">Deadline</p>
                                 <p class="text-lg font-bold">21 March 2025</p>
                             </div>
-                            <button class="btn btn-primary">Completed</button>
+                            <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -173,8 +173,6 @@
         </section>
         
     </main>
-    <footer>
-
-    </footer>
+   <script src="script/btn.js"></script>
 </body>
 </html>
