--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         </section>
         
         <!-- card -->
-        <section class="mt-4 ml-4 mx-auto gap-4 mr-4">
-            <div class="grid grid-cols-3 gap-x-2 gap-y-2">
+        <section class="mt-4 ml-4 mx-auto gap-4 mr-4 mb-8">
+            <div class="grid grid-cols-3 gap-x-2 gap-y-2 ">
                 <div class="card bg-base-100 bg-gray-200 p-4">
-                    <div class="card-body">
+                    <div class="card-body ">
                         <span class="badge badge-xs text-white bg-violet-600">ShopEase</span>
                         <div class="justify-between">
                             <h2 class="text-xl font-semibold">Fix Mobile Button Issue</h2>
@@ -89,7 +89,7 @@
                         <div class="flex mt-6 justify-between items-center">
                             <div>
                                 <p class="text-gray-600 text-xs">Deadline</p>
-                                <p class="text-lg font-bold">21 March 2025</p>
+                                <p class="text-lg font-bold">25 March 2025</p>
                             </div>
                             <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
@@ -107,7 +107,7 @@
                         <div class="flex mt-6 justify-between items-center">
                             <div>
                                 <p class="text-gray-600 text-xs">Deadline</p>
-                                <p class="text-lg font-bold">21 March 2025</p>
+                                <p class="text-lg font-bold">31 March 2025</p>
                             </div>
                             <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
@@ -143,7 +143,7 @@
                         <div class="flex mt-6 justify-between items-center">
                             <div>
                                 <p class="text-gray-600 text-xs">Deadline</p>
-                                <p class="text-lg font-bold">21 March 2025</p>
+                                <p class="text-lg font-bold">01 April 2025</p>
                             </div>
                             <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="flex mt-6 justify-between items-center">
                             <div>
                                 <p class="text-gray-600 text-xs">Deadline</p>
-                                <p class="text-lg font-bold">21 March 2025</p>
+                                <p class="text-lg font-bold">05 May 2025</p>
                             </div>
                             <button class="btn btn-primary Completed-btn">Completed</button>
                         </div>
