--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <h2 class="text-xl font-semibold">Integrate OpenAI API </h2>
                         </div>
                         <div>
-                            <p class="bg-base-100 px-3 py-3 rounded-lg">To integrate the OpenAI API, install the OpenAI SDK and use the `openai` library to make requests for generating completions or other tasks.</p>
+                            <p class="bg-base-100 px-3 py-3 rounded-lg">To integrate the OpenAI API and use the `openai` library to make requests for generating completions or other tasks.</p>
                         </div>
                         <div class="flex mt-6 justify-between items-center">
                             <div>
