--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </div>
                 </div>
         
-                <div class="flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-300  hover:from-violet-500 hover:to-violet-300 px-2 rounded-md">
+                <div class="flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-300 px-2 rounded-md">
                     <img class="w-6 h-6" src="assets/board.png" alt="">
                     <div class="my-2">
-                        <p class="text-white text-xs">Discover Something</p>
+                        <p id="discover" class="text-white text-xs">Discover Something</p>
                         <p class="text-xs text-white">New Today!</p>
                     </div>
                 </div>
@@ -175,5 +175,6 @@
     </main>
     <script src="script/bg_theme.js"></script>
    <script src="script/btn.js"></script>
+   <script src="script/discover.js"></script>
 </body>
 </html>
