back to desk linkup with index.html

--- a/main.html
+++ b/main.html
@@ -33,23 +33,21 @@
             </div>
             <div class="bg-red-100 rounded-md px-2 py-2">
                 <h1 class="text-xl font-bold mb-4">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
-                <p class="text-gray-500">There are so many wayes to select an element in the DOM, but we use 'getElementById'
-                    and 'getElementsByClassName' the most.</p>
+                <p class="text-gray-500">innerHTML gets or sets HTML of a event. <br>
+                    innerText gets or sets only visible text of a event. <br>
+                    textContent gets or sets all text of a event.</p>
             </div>
             <div class="bg-red-100 rounded-md px-2 py-2">
                 <h1 class="text-xl font-bold mb-4">Question-3: What is event delegation in the DOM?</h1>
-                <p class="text-gray-500">There are so many wayes to select an element in the DOM, but we use 'getElementById'
-                    and 'getElementsByClassName' the most.</p>
+                <p class="text-gray-500">This technique is used when a single event listener on a parent element handles events for its child elements</p>
             </div>
             <div class="bg-red-100 rounded-md px-2 py-2">
                 <h1 class="text-xl font-bold mb-4">Question-4: What is event bubbling in the DOM?</h1>
-                <p class="text-gray-500">There are so many wayes to select an element in the DOM, but we use 'getElementById'
-                    and 'getElementsByClassName' the most.</p>
+                <p class="text-gray-500"> when an event on a child element moves up to its parent elements then it use event bubbling.</p>
             </div>
             <div class="bg-red-100 rounded-md px-2 py-2">
                 <h1 class="text-xl font-bold mb-4">Question-5: How do you create, add, and remove elements using JavaScript?</h1>
-                <p class="text-gray-500">There are so many wayes to select an element in the DOM, but we use 'getElementById'
-                    and 'getElementsByClassName' the most.</p>
+                <p class="text-gray-500">Use 'document.createElement' for create, 'document.body.appendChild' for add element and 'document.body.removeChild' for remove element</p>
             </div>
         </div>
     </section>
