back to desk linkup with index.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <div class="flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-300 px-2 rounded-md">
                     <img class="w-6 h-6" src="assets/board.png" alt="">
                     <div class="my-2">
-                        <p id="discover" class="text-white text-xs">Discover Something</p>
-                        <p class="text-xs text-white">New Today!</p>
+                        <p id="discover" class="text-white text-xs">Discover Something <br>New Today!</p>
                     </div>
                 </div>
         
